--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<script type="text/javascript" src="js/indexJs.js"></script>
 	</head>
 	<body>
-		<div align="center">
+		<div align="center" style="width:1920">
 			<div id="top" style="width:70%;height:50px;background-color:#2f4f4f;" align="left">
 				<div style=" width:150px;height:45px;float: left;border: 1px solid;" align="center">造梦者影视logo</div>
 				<div style="float:right;">
