--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>造梦者影视</title>
-		<link rel="stylesheet" type="text/css" href="css/index.css"/>
 		<script type="text/javascript" src="js/jquery/jquery-3.2.1.js" ></script>		
 		<script type="text/javascript" src="js/indexJs.js"></script>
+		<link rel="stylesheet" type="text/css" href="css/index.css"/>
+
 	</head>
-	<body>
-		<div align="center" style="width:1920">
-			<div id="top" style="width:70%;height:50px;background-color:#2f4f4f;" align="left">
+	<body >
+		<div align="center">
+			<div id="top" style="width:1920;height:50px;background-color:#2f4f4f;" align="left">
 				<div style=" width:150px;height:45px;float: left;border: 1px solid;" align="center">造梦者影视logo</div>
 				<div style="float:right;">
 				<ul>
@@ -26,8 +27,8 @@
 				</ul>
 				</div>
 			</div>
-			<div style="width:70%;height:300px;background-color:#1E90FF;">
-				 <div style=" margin-top:2px;width: 180px;height:250px ;background-color:#191970;float: right; margin-top: 30px;margin-right: 15px;color: white;">
+			<div style="width:1920;height:300px;background-color:#1E90FF;">
+				 <div style="width: 180px;height:250px ;background-color:#191970;float: right; margin-top: 30px;margin-right: 15px;color: white;">
 		        	重磅校园热度
 		        </div>
 				<div  style="width: 250px;height: 295px;float: right;position:absolute;left:42%;">
@@ -48,18 +49,18 @@
 			<!--内容区域-->
 			<div >
 				<!--精选-->
-			 <div class="fl" style="width:70%;height: 490px;" >
+			 <div class="fl" style="width:1920;height: 490px;" >
 				<div>
-					<div >
-						<div class="bt" >精选</div>
-						<div class="ebt" style="width: 100%;height:25px; ">
-							<div style="width: 15%;height:25px;border: 0px ;" align="center">
+					<div class="easy">
+						<div class="bt">精选</div>
+						<div class="ebt" style="width: 100%;">
+						  <div style="width: 15%;height:25px;border: 0px ;" align="center">
 							<div style="float: left;"><hr style="width: 10px;" color="#1E90FF"/></div>
 							<div style="float: left;margin-left: 3px;"><hr style="width: 10px;" color="#1E90FF"/></div>
 							<div style="float: left;">Campus TV</div>
 							<div style="float: left;"><hr style="width: 10px;color:#1E90FF ;" color="#1E90FF"/></div>
 							<div style="float: left;margin-left: 3px;"><hr style="width: 10px;" color="#1E90FF"/></div>
-							</div>
+						  </div>
 						</div>
 					</div>
 					<div >
@@ -67,7 +68,7 @@
 							精选热播排名
 						</div>
 						<div style="width:70%;height: 400px; float: right; margin-right: 15px;">
-							<div style="width: 100%; height: 50%;">
+							<div class="sp">
 								<div class="sp1"  onclick="tz1('sp1','图1.mp4')">
 									<div class="sp2" >
 															
@@ -168,14 +169,11 @@
 						</div>
 					</div>				
 				</div>
-				<div class="sp4"  >
-					<a href="#"  style="color: #c0c0c0;" >进入</a>
-				</div>
 			 </div>
 			 <!--校园故事-->
-			 <div class="fl" style="width:70%;height: 490px;" >
+			 <div class="fl" style="width:1920;height: 490px;" >
 				<div>
-					<div>
+					<div class="easy">
 						<div class="bt">校园故事</div>
 						<div class="ebt" style="width: 100%;height:25px; ">
 							<div style="width: 16%;height:25px;border: 0px" align="center">
@@ -192,7 +190,7 @@
 							精选热播排名
 						</div>
 						<div style="width:70%;height: 400px; float: right; margin-right: 15px;">
-							<div style="width: 100%; height: 50%;">
+							<div class="sp">
 								<div class="sp1" >
 									<div class="sp2" >
 										1					
@@ -293,13 +291,10 @@
 						</div>
 					</div>				
 				</div>
-                <div class="sp4" style=" width: 100px;" >
-					<a href="#"  style="color: #c0c0c0;" >进入</a>
-				</div>
 			 </div>
-			 <div class="fl" style="width:70%;height: 490px;" >
+			 <div class="fl" style="width:1920;height: 490px;" >
 				<div>
-					<div>
+					<div class="easy">
 						<div class="bt">微电影</div>
 						<div class="ebt" style="width: 100%;height:25px;">
 							<div style="width: 19%;height:25px;border: 0px; " align="center">
@@ -316,7 +311,7 @@
 							精选热播排名
 						</div>
 						<div style="width:70%;height: 400px; float: right; margin-right: 15px;">
-							<div style="width: 100%; height: 50%;">
+							<div class="sp">
 								<div class="sp1" >
 									<div class="sp2" >
 										1					
@@ -417,13 +412,10 @@
 						</div>
 					</div>				
 				</div>
-			    <div class="sp4" style=" width: 100px;" >
-					<a href="#"  style="color: #c0c0c0;" >进入</a>
-				</div>
 			 </div>
-			 <div class="fl" style="width:70%;height: 490px;" >
+			 <div class="fl" style="width:1920;height: 490px;" >
 				<div>
-					<div>
+					<div class="easy">
 						<div class="bt">时尚短片</div>
 						<div class="ebt" style="width: 100%;height:25px;">
 							<div style="width: 17%;height:25px;" align="center">
@@ -440,7 +432,7 @@
 							精选热播排名
 						</div>
 						<div style="width:70%;height: 400px; float: right; margin-right: 15px;">
-							<div style="width: 100%; height: 50%;">
+							<div class="sp">
 								<div class="sp1" >
 									<div class="sp2" >
 										1					
@@ -541,13 +533,10 @@
 						</div>
 					</div>				
 				</div>
-			    <div class="sp4" style=" width: 100px;" >
-					<a href="#"  style="color: #c0c0c0;" >进入</a>
-				</div>
 			 </div>
-			 <div class="fl" style="width:70%;height: 490px;" >
+			 <div class="fl" style="width:1920;height: 490px;" >
 				<div>
-					<div>
+					<div class="easy">
 						<div class="bt">校园新闻</div>
 						<div class="ebt" style="width: 100%;height:25px;">
 							<div style="width: 16%;height:25px;" align="center">
@@ -564,7 +553,7 @@
 							精选热播排名
 						</div>
 						<div style="width:70%;height: 400px; float: right; margin-right: 15px;">
-							<div style="width: 100%; height: 50%;">
+							<div class="sp">
 								<div class="sp1" >
 									<div class="sp2" >
 										1					
@@ -665,13 +654,10 @@
 						</div>
 					</div>				
 				</div>
-			    <div class="sp4" style=" width: 100px;" >
-					<a href="#"  style="color: #c0c0c0;" >进入</a>
-				</div>
 			 </div>
-			 <div class="fl" style="width:70%;height: 490px;" >
+			 <div class="fl" style="width:1920;height: 490px;" >
 				<div>
-					<div>
+					<div class="easy">
 						<div class="bt">校园资讯</div>
 						<div class="ebt" style="width: 100%;height:25px;">
 							<div style="width: 20%;height:25px;" align="center">
@@ -688,7 +674,7 @@
 							精选热播排名
 						</div>
 						<div style="width:70%;height: 400px; float: right; margin-right: 15px;">
-							<div style="width: 100%; height: 50%;">
+							<div class="sp">
 								<div class="sp1" >
 									<div class="sp2" >
 										1					
@@ -789,15 +775,12 @@
 						</div>
 					</div>				
 				</div>
-			    <div class="sp4" style=" width: 100px;" >
-					<a href="#"  style="color: #c0c0c0;" >进入</a>
-				</div>
 			 </div>
 			</div>
-			<div style="font-size: 20px; width:70%; " align="left">
+			<div style="font-size: 20px; width:1920; " align="left">
 				校园服务
 			</div>
-			<div id="" style="width:70%;height: 150px;">
+			<div id="" style="width:1920;height: 150px;">
 				<div class="fw" style="background-color:#191970 ;">
 					<a href="#">英语四六级</a>
 				</div>
@@ -819,8 +802,8 @@
 					<a href="#">学生兼职</a>
 				</div>	
 			</div>
-			<div style="width: 70%;"><hr></div>
-			<div id="" style="width:70%;height: 150px;">
+			<div style="width: 1920;"><hr></div>
+			<div id="" style="width:1920;height: 150px;">
 				<div style="height: 80%;width: 100%;">
 					<div style="width: 20%;float: left;margin: 0px;font-size: 20px;font-weight: bolder;">
 						友情链接
