--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
 	</head>
 	<body >
 		<div align="center">
-			<div id="top" style="width:1920;height:50px;background-color:#2f4f4f;" align="left">
+			<div id="top" style="width:1920;height:60px;background-color:#2f4f4f;">
 				<div style=" width:150px;height:45px;float: left;border: 1px solid;" align="center">造梦者影视logo</div>
-				<div style="float:right;">
 				<ul>
 					<li><a href="menu/精选.html">精选</a></li>
 					<li><a href="menu/校园故事.html">校园故事</a></li>
@@ -25,7 +24,7 @@
 					<li><a href="index2/GNlogin.html" target="_self">登陆</a></li>
 					<li><a href="index2/GN注册页面.html" target="_blank">注册</a></li>
 				</ul>
-				</div>
+
 			</div>
 			<div style="width:1920;height:300px;background-color:#1E90FF;">
 				 <div style="width: 180px;height:250px ;background-color:#191970;float: right; margin-top: 30px;margin-right: 15px;color: white;">
