--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<body >
 		<div align="center">
 			<div id="top" style="width:1920;height:60px;background-color:#2f4f4f;">
-				<div style=" width:150px;height:45px;float: left;border: 1px solid;" align="center">造梦者影视logo</div>
+				<div style=" width:150px;height:45px;float:left;border: 1px solid;" align="center">造梦者影视logo</div>
 				<ul>
 					<li><a href="menu/精选.html">精选</a></li>
 					<li><a href="menu/校园故事.html">校园故事</a></li>
@@ -51,19 +51,12 @@
 			 <div class="fl" style="width:1920;height: 490px;" >
 				<div>
 					<div class="easy">
-						<div class="bt">精选</div>
-						<div class="ebt" style="width: 100%;">
-						  <div style="width: 15%;height:25px;border: 0px ;" align="center">
-							<div style="float: left;"><hr style="width: 10px;" color="#1E90FF"/></div>
-							<div style="float: left;margin-left: 3px;"><hr style="width: 10px;" color="#1E90FF"/></div>
-							<div style="float: left;">Campus TV</div>
-							<div style="float: left;"><hr style="width: 10px;color:#1E90FF ;" color="#1E90FF"/></div>
-							<div style="float: left;margin-left: 3px;"><hr style="width: 10px;" color="#1E90FF"/></div>
-						  </div>
-						</div>
+						<div class="bt">精选<br/>
+							<span style="color: #1E90FF;"><span style="font-size:25px;">--</span>Campus TV<span style="font-size:25px;">--</span></span>
+						</div>																  						
 					</div>
 					<div >
-						<div style="width:20%;height:400px; float: right;margin-right: 5px;background-color: #f5f5f5;" >
+						<div class="rbsort" >
 							精选热播排名
 						</div>
 						<div style="width:70%;height: 400px; float: right; margin-right: 15px;">
@@ -173,19 +166,13 @@
 			 <div class="fl" style="width:1920;height: 490px;" >
 				<div>
 					<div class="easy">
-						<div class="bt">校园故事</div>
-						<div class="ebt" style="width: 100%;height:25px; ">
-							<div style="width: 16%;height:25px;border: 0px" align="center">
-							<div style="float: left;"><hr style="width: 10px;" color="#1E90FF"/></div>
-							<div style="float: left;margin-left: 3px;"><hr style="width: 10px;" color="#1E90FF"/></div>
-							<div style="float: left;">Campus Story</div>
-							<div style="float: left;"><hr style="width: 10px;color:#1E90FF ;" color="#1E90FF"/></div>
-							<div style="float: left;margin-left: 3px;"><hr style="width: 10px;" color="#1E90FF"/></div>
-							</div>
+						<div class="bt">校园故事	<br/>											
+							<span style="color: #1E90FF;"><span style="font-size:25px;">--</span>Campus Story<span style="font-size:25px;">--</span></span>											
 						</div>
+					</div>						
 					</div>
 					<div >
-						<div style="width:20%;height:400px; float: right;margin-right: 5px;background-color: #f5f5f5;" >
+						<div class="rbsort" >
 							精选热播排名
 						</div>
 						<div style="width:70%;height: 400px; float: right; margin-right: 15px;">
@@ -294,19 +281,12 @@
 			 <div class="fl" style="width:1920;height: 490px;" >
 				<div>
 					<div class="easy">
-						<div class="bt">微电影</div>
-						<div class="ebt" style="width: 100%;height:25px;">
-							<div style="width: 19%;height:25px;border: 0px; " align="center">
-							<div style="float: left;"><hr style="width: 10px;" color="#1E90FF"/></div>
-							<div style="float: left;margin-left: 3px;"><hr style="width: 10px;" color="#1E90FF"/></div>
-							<div style="float: left;">Campus microfilm</div>
-							<div style="float: left;"><hr style="width: 10px;color:#1E90FF ;" color="#1E90FF"/></div>
-							<div style="float: left;margin-left: 3px;"><hr style="width: 10px;" color="#1E90FF"/></div>
-							</div>
-						</div>
+						<div class="bt">微电影<br/>													
+		                 <span style="color: #1E90FF;"><span style="font-size:25px;">--</span>Campus microfilm<span style="font-size:25px;">--</span></span>											
+                       </div>						
 					</div>
 					<div >
-						<div style="width:20%;height:400px; float: right;margin-right: 5px;background-color: #f5f5f5;" >
+						<div class="rbsort" >
 							精选热播排名
 						</div>
 						<div style="width:70%;height: 400px; float: right; margin-right: 15px;">
@@ -415,19 +395,12 @@
 			 <div class="fl" style="width:1920;height: 490px;" >
 				<div>
 					<div class="easy">
-						<div class="bt">时尚短片</div>
-						<div class="ebt" style="width: 100%;height:25px;">
-							<div style="width: 17%;height:25px;" align="center">
-							<div style="float: left;"><hr style="width: 10px;" color="#1E90FF"/></div>
-							<div style="float: left;margin-left: 3px;"><hr style="width: 10px;" color="#1E90FF"/></div>
-							<div style="float: left;">Campus fashion</div>
-							<div style="float: left;"><hr style="width: 10px;color:#1E90FF ;" color="#1E90FF"/></div>
-							<div style="float: left;margin-left: 3px;"><hr style="width: 10px;" color="#1E90FF"/></div>
-							</div>
-						</div>
+						<div class="bt">时尚短片<br/> 
+						<span style="color: #1E90FF;"><span style="font-size:25px;">--</span>Campus fashion<span style="font-size:25px;">--</span></span>											
+                        </div>
 					</div>
 					<div >
-						<div style="width:20%;height:400px; float: right;margin-right: 5px;background-color: #f5f5f5;" >
+						<div class="rbsort" >
 							精选热播排名
 						</div>
 						<div style="width:70%;height: 400px; float: right; margin-right: 15px;">
@@ -536,19 +509,12 @@
 			 <div class="fl" style="width:1920;height: 490px;" >
 				<div>
 					<div class="easy">
-						<div class="bt">校园新闻</div>
-						<div class="ebt" style="width: 100%;height:25px;">
-							<div style="width: 16%;height:25px;" align="center">
-							<div style="float: left;"><hr style="width: 10px;" color="#1E90FF"/></div>
-							<div style="float: left;margin-left: 3px;"><hr style="width: 10px;" color="#1E90FF"/></div>
-							<div style="float: left;">Campus news</div>
-							<div style="float: left;"><hr style="width: 10px;color:#1E90FF ;" color="#1E90FF"/></div>
-							<div style="float: left;margin-left: 3px;"><hr style="width: 10px;" color="#1E90FF"/></div>
-							</div>
+						<div class="bt">校园新闻<br/>
+						<span style="color: #1E90FF;"><span style="font-size:25px;">--</span>Campus news<span style="font-size:25px;">--</span></span>																	
 						</div>
 					</div>
 					<div >
-						<div style="width:20%;height:400px; float: right;margin-right: 5px;background-color: #f5f5f5;" >
+						<div class="rbsort" >
 							精选热播排名
 						</div>
 						<div style="width:70%;height: 400px; float: right; margin-right: 15px;">
@@ -657,19 +623,12 @@
 			 <div class="fl" style="width:1920;height: 490px;" >
 				<div>
 					<div class="easy">
-						<div class="bt">校园资讯</div>
-						<div class="ebt" style="width: 100%;height:25px;">
-							<div style="width: 20%;height:25px;" align="center">
-							<div style="float: left;"><hr style="width: 10px;" color="#1E90FF"/></div>
-							<div style="float: left;margin-left: 3px;"><hr style="width: 10px;" color="#1E90FF"/></div>
-							<div style="float: left;">Campus information</div>
-							<div style="float: left;"><hr style="width: 10px;color:#1E90FF ;" color="#1E90FF"/></div>
-							<div style="float: left;margin-left: 3px;"><hr style="width: 10px;" color="#1E90FF"/></div>
-							</div>
+						<div class="bt">校园资讯<br/>
+							<span style="color: #1E90FF;"><span style="font-size:25px;">--</span>Campus information<span style="font-size:25px;">--</span></span>											
 						</div>
 					</div>
 					<div >
-						<div style="width:20%;height:400px; float: right;margin-right: 5px;background-color: #f5f5f5;" >
+						<div class="rbsort" >
 							精选热播排名
 						</div>
 						<div style="width:70%;height: 400px; float: right; margin-right: 15px;">
