--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 						<div class="rbsort" >
 							精选热播排名
 						</div>
-						<div style="width:70%;height: 400px; float: right; margin-right: 15px;">
+						<div style="width:825px;height: 400px; float: right; margin-right: 15px;">
 							<div class="sp">
 								<div class="sp1"  onclick="tz1('sp1','图1.mp4')">
 									<div class="sp2" >
@@ -175,7 +175,7 @@
 						<div class="rbsort" >
 							精选热播排名
 						</div>
-						<div style="width:70%;height: 400px; float: right; margin-right: 15px;">
+						<div style="width:825px;height: 400px; float: right; margin-right: 15px;">
 							<div class="sp">
 								<div class="sp1" >
 									<div class="sp2" >
@@ -289,7 +289,7 @@
 						<div class="rbsort" >
 							精选热播排名
 						</div>
-						<div style="width:70%;height: 400px; float: right; margin-right: 15px;">
+						<div style="width:825px;height: 400px; float: right; margin-right: 15px;">
 							<div class="sp">
 								<div class="sp1" >
 									<div class="sp2" >
@@ -403,7 +403,7 @@
 						<div class="rbsort" >
 							精选热播排名
 						</div>
-						<div style="width:70%;height: 400px; float: right; margin-right: 15px;">
+						<div style="width:825px;height: 400px; float: right; margin-right: 15px;">
 							<div class="sp">
 								<div class="sp1" >
 									<div class="sp2" >
@@ -517,7 +517,7 @@
 						<div class="rbsort" >
 							精选热播排名
 						</div>
-						<div style="width:70%;height: 400px; float: right; margin-right: 15px;">
+						<div style="width:825px;height: 400px; float: right; margin-right: 15px;">
 							<div class="sp">
 								<div class="sp1" >
 									<div class="sp2" >
@@ -631,7 +631,7 @@
 						<div class="rbsort" >
 							精选热播排名
 						</div>
-						<div style="width:70%;height: 400px; float: right; margin-right: 15px;">
+						<div style="width:825px;height: 400px; float: right; margin-right: 15px;">
 							<div class="sp">
 								<div class="sp1" >
 									<div class="sp2" >
