--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<body >
 		<div align="center">
 			<div id="top" style="width:1920;height:60px;background-color:#2f4f4f;">
-				
+				<div style=" width:150px;height:45px;float:left;border: 1px solid;" align="center">造梦者影视logo</div>
 				<ul>
 					<li><a href="menu/精选.html">精选</a></li>
 					<li><a href="menu/校园故事.html">校园故事</a></li>
@@ -48,8 +48,7 @@
 			<!--内容区域-->
 			<div >
 				<!--精选-->
-			 <div class="fl" style="width:1920;height: 490px;" >
-				<div>
+			 <div class="fl"  >
 					<div class="easy">
 						<div class="bt">精选<br/>
 							<span style="color: #1E90FF;"><span style="font-size:25px;">--</span>Campus TV<span style="font-size:25px;">--</span></span>
@@ -59,7 +58,7 @@
 						<div class="rbsort" >
 							精选热播排名
 						</div>
-						<div style="width:825px;height: 400px; float: right; margin-right: 15px;">
+						<div class="videoshow">
 							<div class="sp">
 								<div class="sp1"  onclick="tz1('sp1','图1.mp4')">
 									<div class="sp2" >
@@ -160,22 +159,19 @@
 							</div>							
 						</div>
 					</div>				
-				</div>
 			 </div>
 			 <!--校园故事-->
 			 <div class="fl" style="width:1920;height: 490px;" >
-				<div>
 					<div class="easy">
 						<div class="bt">校园故事	<br/>											
 							<span style="color: #1E90FF;"><span style="font-size:25px;">--</span>Campus Story<span style="font-size:25px;">--</span></span>											
 						</div>
 					</div>						
-					</div>
 					<div >
 						<div class="rbsort" >
 							精选热播排名
 						</div>
-						<div style="width:825px;height: 400px; float: right; margin-right: 15px;">
+						<div class="videoshow">
 							<div class="sp">
 								<div class="sp1" >
 									<div class="sp2" >
@@ -276,10 +272,9 @@
 							</div>							
 						</div>
 					</div>				
-				</div>
 			 </div>
 			 <div class="fl" style="width:1920;height: 490px;" >
-				<div>
+				
 					<div class="easy">
 						<div class="bt">微电影<br/>													
 		                 <span style="color: #1E90FF;"><span style="font-size:25px;">--</span>Campus microfilm<span style="font-size:25px;">--</span></span>											
@@ -289,7 +284,7 @@
 						<div class="rbsort" >
 							精选热播排名
 						</div>
-						<div style="width:825px;height: 400px; float: right; margin-right: 15px;">
+						<div class="videoshow">
 							<div class="sp">
 								<div class="sp1" >
 									<div class="sp2" >
@@ -390,10 +385,8 @@
 							</div>							
 						</div>
 					</div>				
-				</div>
 			 </div>
 			 <div class="fl" style="width:1920;height: 490px;" >
-				<div>
 					<div class="easy">
 						<div class="bt">时尚短片<br/> 
 						<span style="color: #1E90FF;"><span style="font-size:25px;">--</span>Campus fashion<span style="font-size:25px;">--</span></span>											
@@ -403,7 +396,7 @@
 						<div class="rbsort" >
 							精选热播排名
 						</div>
-						<div style="width:825px;height: 400px; float: right; margin-right: 15px;">
+						<div class="videoshow">
 							<div class="sp">
 								<div class="sp1" >
 									<div class="sp2" >
@@ -504,10 +497,8 @@
 							</div>							
 						</div>
 					</div>				
-				</div>
 			 </div>
 			 <div class="fl" style="width:1920;height: 490px;" >
-				<div>
 					<div class="easy">
 						<div class="bt">校园新闻<br/>
 						<span style="color: #1E90FF;"><span style="font-size:25px;">--</span>Campus news<span style="font-size:25px;">--</span></span>																	
@@ -517,7 +508,7 @@
 						<div class="rbsort" >
 							精选热播排名
 						</div>
-						<div style="width:825px;height: 400px; float: right; margin-right: 15px;">
+						<div class="videoshow">
 							<div class="sp">
 								<div class="sp1" >
 									<div class="sp2" >
@@ -615,13 +606,11 @@
 										</div>
 									</div>
 								</div>
-							</div>							
+							</div>												
 						</div>
-					</div>				
-				</div>
+					</div>	
 			 </div>
 			 <div class="fl" style="width:1920;height: 490px;" >
-				<div>
 					<div class="easy">
 						<div class="bt">校园资讯<br/>
 							<span style="color: #1E90FF;"><span style="font-size:25px;">--</span>Campus information<span style="font-size:25px;">--</span></span>											
@@ -631,7 +620,7 @@
 						<div class="rbsort" >
 							精选热播排名
 						</div>
-						<div style="width:825px;height: 400px; float: right; margin-right: 15px;">
+						<div class="videoshow">
 							<div class="sp">
 								<div class="sp1" >
 									<div class="sp2" >
