--- a/index.html
+++ b/index.html
@@ -776,7 +776,7 @@
 						<div class="bot"><a href="#">联系我们</a></div>
 					</div>
 				</div>
-				<div style="height: 20%;width: 100%;font-weight: bolder;">
+				<div style="height: 20%;width: 100%;font-weight: bolder;" align="center">
 					<span style="border-right: 3px solid black;"><a href="#" style="color: black;">关于我们</a></span><a href="#" style="color: black;">加入我们</a>
 				</div>
 			</div>
