--- a/index2/GN注册页面.html
+++ b/index2/GN注册页面.html
@@ -4,8 +4,9 @@
 		<meta charset="UTF-8">
 		<title>GN注册</title>
 		<style type="text/css">
+			html{width:1536px;margin: auto;overflow: auto;}
 			*{margin: 0px;padding: 0px;}
-			body{position: absolute;top: 0px;bottom: 0px;left: 0px;right: 0px;}
+			body{width:1536px;height:750px;}
 			#top{width: 100%;height:10%;border: 1px solid;}
 			#main{width: 60%;height: 90%; border: 1px solid; margin: 0px auto;}
 			#img{width: 60px;height: 60px;background-color: #3259A4;float: left; margin-top: 6px;margin-left: 15px;}
