--- a/menu/时尚短片.html
+++ b/menu/时尚短片.html
@@ -9,11 +9,11 @@
 	</head>
 	<body>
 		<div align="center">
-			<div id="top" style="width:70%;height:50px;background-color:#2f4f4f;" align="left">
+			<div id="top" style="width:100%;height:50px;background-color:#2f4f4f;" align="left">
 				<div style=" width:150px;height:45px;float: left;border: 1px solid;" align="center">造梦者影视logo</div>
 				<div style="float:right;">
 				<ul>
-					<li><a href="精选.html">精选</a></li>
+					<li><a href="/造梦者影视/menu/精选.html">精选</a></li>
 					<li><a href="校园故事.html">校园故事</a></li>
 					<li><a href="微电影.html">微电影</a></li>
 					<li><a href="时尚短片.html">时尚短片</a></li>
@@ -26,11 +26,11 @@
 				</ul>
 				</div>
 			</div>
-			<div style="width:70%;height:300px;background-color:#1E90FF;">
+			<div style="width:100%;height:300px;background-color:#1E90FF;">
 				 <div style=" margin-top:2px;width: 180px;height:250px ;background-color:#191970;float: right; margin-top: 30px;margin-right: 15px;color: white;">
 		        	重磅校园热度
 		        </div>
-				<div  style="width: 250px;height: 295px;float: right;position:absolute;left:42%;">
+				<div  style="width: 250px;height: 295px;margin: auto;">
 			     <div >
 				  <span  >
 					<input type="text" id="" value="搜索框" style=" margin-top: 10px;width: 200px; height: 30px; background-color: #3d59ab;font-size: 25px;border:0px;color:white;"  />
@@ -45,18 +45,12 @@
 		       </div>		       
 			</div>
 			<!--内容区域-->
-			<div class="fl" style="width:1293px;height:1300px;  " >
+			<div class="fl" style="width:100%;height:1300px;  " >
 					<div >
-						<div class="bt" >时尚短片</div>
-						<div class="ebt" style="width: 100%;height:25px; ">
-							<div style="width: 15%;height:25px;border: 0px ;" align="center">
-							<div style="float: left;"><hr style="width: 10px;" color="#1E90FF"/></div>
-							<div style="float: left;margin-left: 3px;"><hr style="width: 10px;" color="#1E90FF"/></div>
-							<div style="float: left;">Campus TV</div>
-							<div style="float: left;"><hr style="width: 10px;color:#1E90FF ;" color="#1E90FF"/></div>
-							<div style="float: left;margin-left: 3px;"><hr style="width: 10px;" color="#1E90FF"/></div>
-							</div>
+						<div class="bt" >精选</br>
+							<span style="color: #1E90FF;"><span style="font-size:25px;">--</span>Campus TV<span style="font-size:25px;">--</span></span>
 						</div>
+						
 					</div>
 					<div style="width: 1293px; height: 500px;">
 						<div style="width:258px;height:400px; float: right;margin-right: 5px;background-color: #f5f5f5;" >
@@ -363,10 +357,10 @@
 			</div>
 			<!-- 页面尾部foot-->
 			<div >
-			 <div style="font-size: 20px; width:70%; " align="left">
+			 <div style="font-size: 20px; width:100%; " align="left">
 				校园服务
 			 </div>
-			 <div id="" style="width:70%;height: 150px;">
+			 <div id="" style="width:100%;height: 150px;">
 				<div class="fw" style="background-color:#191970 ;">
 					<a href="#">英语四六级</a>
 				</div>
@@ -388,8 +382,8 @@
 					<a href="#">学生兼职</a>
 				</div>	
 			 </div>
-			 <div style="width: 70%;"><hr></div>
-			 <div id="" style="width:70%;height: 150px;">
+			 <div style="width: 100%;"><hr></div>
+			 <div id="" style="width:100%;height: 150px;">
 				<div style="height: 80%;width: 100%;">
 					<div style="width: 20%;float: left;margin: 0px;font-size: 20px;font-weight: bolder;">
 						友情链接
