--- a/index2/index2.html
+++ b/index2/index2.html
@@ -203,7 +203,7 @@
 			        </div>
 				</div>
 				<div id="div3-2" class="div3-2"  >
-					<video  id="vidplay" src="../index2/video/" controls="controls" width="775px" height="436px" onclick="vidShift();">
+					<video  id="vidplay" src="../index2/video/图1.mp4" controls="controls" width="775px" height="436px" onclick="vidShift();">
 						
 					</video>										
 					
