--- a/menu/精选.html
+++ b/menu/精选.html
@@ -13,7 +13,7 @@
 				<div style=" width:150px;height:45px;float: left;border: 1px solid;" align="center">造梦者影视logo</div>
 				<div style="float:right;">
 				<ul>
-					<li><a href="/造梦者影视/menu/精选.html">精选</a></li>
+					<li><a href="精选.html">精选</a></li>
 					<li><a href="校园故事.html">校园故事</a></li>
 					<li><a href="微电影.html">微电影</a></li>
 					<li><a href="时尚短片.html">时尚短片</a></li>
