--- a/menu/时尚短片.html
+++ b/menu/时尚短片.html
@@ -47,7 +47,7 @@
 			<!--内容区域-->
 			<div class="fl" style="width:100%;height:1300px;  " >
 					<div >
-						<div class="bt" >精选</br>
+						<div class="bt" >时尚短片</br>
 							<span style="color: #1E90FF;"><span style="font-size:25px;">--</span>Campus TV<span style="font-size:25px;">--</span></span>
 						</div>
 						
